# spigot-builder

./: .clang-format  CMakeLists.txt  CMakePresets.json
app/: BuildTask.cpp  BuildTask.h  CMakeLists.txt  JdkPrepareTask.cpp  JdkPrepareTask.h  MainWidget.cpp  MainWidget.h  bundle.cmake  main.cpp
